# fav_23_24_final_project

./: CMakeLists.txt
config/: mapping_params.yaml  path_follower_config.yaml  position_controller_config.yaml  rviz.rviz  scenario_1.yaml  scenario_2.yaml  scenario_3.yaml  scenario_4.yaml  viewpoints_0.yaml  yaw_controller_config.yaml
launch/: final_project.launch.py  test.launch.py
msg/: Viewpoint.msg  Viewpoints.msg
nodes/: mapper.py  path_follower.py  path_planner.py  position_controller.py  robot_marker_publisher.py  scenario_node.py  yaw_controller.py
scripts/: test_trajectory_gen.py  test_walkable.py
srv/: MoveToStart.srv
